<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/colorPrimary"
              tools:context="com.fahed.developer.evilcorpbank.AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/banner_card_ecorp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/title_person_account"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_balance_account"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_balance_account"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_detail_account"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="25dp"
                android:background="?attr/colorAccent"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_account_number_detail_account"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textViewAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/title_balance_account_number_detail_account"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title_international_account_number_detail_account"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textViewInternationalAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_balance_international_account_number_detail_account"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>
