<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorPrimary"
              android:orientation="horizontal"
              android:paddingBottom="20dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDetailItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_detail_operations"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textViewDateItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_date_operations"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="right|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCountItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_count_operations"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>